Fix rounding in RenderInline::paintOutlineForLine https://bugs.webkit.org/show_bug.cgi?id=82540

Reviewed by Eric Seidel.

No new tests, no change in functionality.

* rendering/RenderInline.cpp:
(WebCore::RenderInline::paintOutlineForLine):
Change paintOutlineForLine to pixel snap the left and right edges of the
lines instead of adding the offset to an already rounded number.


Canonical link: https://commits.webkit.org/99900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112492 268f45cc-cd09-0410-ab3c-d52691b4dbfc